[package]
name = "broke-amusement-server"
version = "0.1.0"
edition = "2024"

[dependencies]
get-last-error = "0.1.1"
quick-xml = { version = "0.38.1", features = ["encoding"] } 
reqwest = { version = "0.12.20", features = ["blocking"] }
serde_json = "1.0.140"
winapi = { version = "0.3", features = ["winuser", "tlhelp32", "processthreadsapi", "handleapi", "winnt", "psapi"] }
